// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sparkline snapShot testing renders Sparkline correctly 1`] = `
<div
  className=
      ms-FocusZone
      &:focus {
        outline: none;
      }
      {
        display: inline;
      }
  data-focuszone-id="FocusZone0"
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDownCapture={[Function]}
>
  <div
    className=

        {
          display: inline;
        }
  >
    <svg
      data-is-focusable={true}
      height={20}
      width={80}
    >
      <path
        className="line"
        d="M0,12.578096183855866L11.428571428571427,2L22.857142857142854,17.446446304440347L34.285714285714285,8.547311675414953L45.71428571428571,7.3599092069797125L57.142857142857146,18.30444034614839L68.57142857142857,16.00113491275358L80,18.6964108384168"
        fill="transparent"
        opacity={1}
        stroke="#00AA00"
        strokeWidth={2}
      />
      <path
        aria-label="Sparkline with label 19.64"
        className="area"
        d="M0,12.578096183855866L11.428571428571427,2L22.857142857142854,17.446446304440347L34.285714285714285,8.547311675414953L45.71428571428571,7.3599092069797125L57.142857142857146,18.30444034614839L68.57142857142857,16.00113491275358L80,18.6964108384168L80,20L68.57142857142857,20L57.142857142857146,20L45.71428571428571,20L34.285714285714285,20L22.857142857142854,20L11.428571428571427,20L0,20Z"
        fill="#00AA00"
        fillOpacity={0.2}
        opacity={1}
      />
    </svg>
    <svg
      data-is-focusable={true}
      height={20}
      width={80}
    >
      <text
        className=

            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #000000;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 12px;
              font-weight: 400;
            }
        dx={8}
        dy={-5}
        x="0%"
        y="100%"
      >
        19.64
      </text>
    </svg>
  </div>
</div>
`;

exports[`Sparkline snapShot testing renders Sparkline correctly with no legend 1`] = `
<div
  className=
      ms-FocusZone
      &:focus {
        outline: none;
      }
      {
        display: inline;
      }
  data-focuszone-id="FocusZone1"
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDownCapture={[Function]}
>
  <div
    className=

        {
          display: inline;
        }
  >
    <svg
      data-is-focusable={true}
      height={20}
      width={80}
    >
      <path
        className="line"
        d="M0,14.154515050167225L16,5.756521739130435L32,7.959866220735786L48,2L64,16.187290969899667L80,10.078929765886288"
        fill="transparent"
        opacity={1}
        stroke="#E60000"
        strokeWidth={2}
      />
      <path
        aria-label="Sparkline with label 131.33"
        className="area"
        d="M0,14.154515050167225L16,5.756521739130435L32,7.959866220735786L48,2L64,16.187290969899667L80,10.078929765886288L80,20L64,20L48,20L32,20L16,20L0,20Z"
        fill="#E60000"
        fillOpacity={0.2}
        opacity={1}
      />
    </svg>
  </div>
</div>
`;
